Changes to to 0.5.36
ALL TODO
	* fully implement tablelooks, the flags in particular, and maybe the 
	colors for the bg should be farmed out to sperate config options rather
	than piggy backing on the other colors, also why did one of the text
	foregrounds not work on its own, while the others did, and is there
	one of two cases where our grid will not handle every case ?

	* bring in some stylesheet constructs, such as para indentation and
	font size and color and so on. move things that direction instead.

	* title not being done in the correct charset
	* add another option for table width, i.e. tableabswidth.
	* we need character formatting for the <li> itself, we can do this I 
	suppose, but i'll hold off on that for a while.

	* fontface and size for char runs..

	* what about a collision between underline and revision added ? and also the 
	strike and revision deleted ?, what if a mad user created his own collisions. 
	In the future there will be problems with links being broken by references, 
	this is a similar problem.
	
	* what was i at with sprmCFtcDefault ????, fBold ??, what the...

	* add the rest of the appropiate char props to decode_simple, repeat for
	decode_complex
	* search for more SEP sprm diffs between 6 and 8
	* add in the list extraction code ?


	* install cygwin thingy at home and test configure mechanism for searching and
	installing strcasecmp/rint.

	* i figured out what the story is with ole embedded files, ill have to modify
	my ole code so as to be able in the future to parse embedded docs and splice
	them together, which could be a wee bit of a challenge.

	* modify configure script so its possible to link against a different expat
	lib, or to disable it or something.
	* add errors via numbered errors to wvInitParser.

	* additional code checks for conversion of codepage whatever to iso for
	ancillary strings that might be stored in that format.
	* modify complex code to stop at end of main text
